# python-exception-handling-workshop

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/model/: person.py  todo.py
