[tool.poetry]
name = "python-exception-handling-workshop"
version = "0.1.0"
description = ""
authors = ["Piotr Grędowski <pgred@orsted.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^21.10-beta.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \venv
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'
line-length = 100
target-version = ['py38']

[tool.isort]
include_trailing_comma = true
line_length = 100
multi_line_output = 3

[tool.pyright]
exclude = ['**/.eggs', '**/venv', '**/.venv']

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=obs_calculation_engine --cov-branch --cov-report=xml --cov-report=html --junitxml=junit.xml"
